<resources>
    <string name="app_name">Promo Analytics</string>
    <string name="title_activity_maps">Promo Analytics</string>
    <string name="facebook_app_id">404760849895061</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="userName">Your Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>

    <string name="title_activity_splash">SplashActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="select_location">Select Location</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
 Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="emailORMob">Email or Mobile Number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="otp">Otp</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="change_password">CHANGE PASSWORD</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="_30_off">30 % off</string>

    <string name="Generic_Text">%s Off</string>
    <string name="no_saved_coupons">No Saved Coupons</string>

</resources>
