<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/slectn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="#EE4239"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/latestoffers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteLocationSearch"
            style="@style/EditTextColorCustom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/location"
            android:background="@null"
            android:drawableRight="@drawable/forward"
            android:gravity="left|center"
            android:hint="@string/select_location"
            android:inputType="textFilter|textMultiLine"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/color_cursor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdbdb" />

        <com.promoanalytics.utils.Fonts.RobotoNormalTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="left|center"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />

        <AutoCompleteTextView
            android:id="@+id/autoCategorySearch"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/location"
            android:background="@null"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableRight="@drawable/forward"
            android:gravity="left|center"
            android:hint="@string/select_category"
            android:inputType="textFilter|textMultiLine"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/color_cursor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdbdb" />
    </LinearLayout>
</layout>