<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.promoanalytics.ui.HomeFragment">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/appBlue">

                </android.support.v7.widget.Toolbar>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logocpn" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_otp" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/phone" />

                    <com.promoanalytics.utils.Fonts.RobotoNormalEditText
                        android:id="@+id/etMobileNumber"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/otp"
                        android:inputType="phone" />

                </LinearLayout>

                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSendOtp"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rectanglefilled"
                    android:text="@string/verify_otp"
                    android:textColor="#fff" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>
</layout>

