<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/appBlue">

            </android.support.v7.widget.Toolbar>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/logocpn" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusable="true"
            android:touchscreenBlocksFocus="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.promoanalytics.utils.Fonts.RobotoLightTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/password" />

                    <com.promoanalytics.utils.Fonts.RobotoLightEditText
                        android:id="@+id/editPassword"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword" />
                </LinearLayout>

                <com.promoanalytics.utils.Fonts.RobotoLightTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmPassword" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/password" />

                    <com.promoanalytics.utils.Fonts.RobotoLightEditText
                        android:id="@+id/EditReEnterPassword"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Re-enter Password"
                        android:inputType="textPassword" />
                </LinearLayout>


                <!-- Signup Button -->
                <com.promoanalytics.utils.Fonts.RobotoLightTextView
                    android:id="@+id/btnSaveProfile"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rectanglefilled"
                    android:gravity="center"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</layout>

