<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.promoanalytics.model.RegisterUser" />

    </data>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/userName" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/profile" />

                    <com.promoanalytics.utils.Fonts.RobotoNormalEditText
                        android:id="@+id/etName"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:nextFocusForward="@+id/etEmail" />

                </LinearLayout>


                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/email" />

                    <com.promoanalytics.utils.Fonts.RobotoNormalEditText
                        android:id="@+id/etEmail"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusForward="@+id/phone" />
                </LinearLayout>

                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneNumber" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/phone" />

                    <com.promoanalytics.utils.Fonts.RobotoNormalEditText
                        android:id="@+id/phone"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Phone Number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:nextFocusForward="@+id/etPassword" />
                </LinearLayout>

                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/password" />

                    <com.promoanalytics.utils.Fonts.RobotoNormalEditText
                        android:id="@+id/etPassword"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:nextFocusForward="@+id/etConfirmPassword" />
                </LinearLayout>

                <com.promoanalytics.utils.Fonts.RobotoNormalTextView
                    style="@style/TextViewHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmPassword" />

                <LinearLayout
                    style="@style/BorderLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/EditTextImage"
                        android:src="@drawable/password" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/EditTextRoboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Re-enter Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <CheckBox
                            android:id="@+id/cbAcceptTnC"
                            style="@style/MyCheckBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="I accept all the terms and conditions"
                            android:textColor="@color/appOrange"
                            app:buttonTint="@color/appOrange" />
                    </LinearLayout>

                </LinearLayout>
                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSignProfile"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rectanglefilled"
                    android:text="Register"
                    android:textColor="#fff" />

                <include
                    android:id="@+id/includeRegister"
                    layout="@layout/social_login" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>